ui/webui/resources/cr_components/composebox/composebox.css
/* Copyright 2025 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=//resources/cr_elements/cr_icons_lit.css.js
 * #scheme=relative
 * #include=cr-icons-lit
 * #css_wrapper_metadata_end */

:host {
  --cr-icon-button-size: 36px;
  --input-bottom-spacing: 10px;
  --text-input-top-spacing: 10px;
  --text-input-inline-end-spacing: 80px;
  --text-input-inline-start-spacing: 16px;
  --expanded-border-radius: 26px;
  --brand-gradient: conic-gradient(
    rgba(52, 168, 82, 0) 0deg,
    rgba(52, 168, 82, 1) 38.9738deg,
    rgba(255, 211, 20, 1) 62.3678deg,
    rgba(255, 70, 65, 1) 87.0062deg,
    rgba(49, 134, 255, 1) 107.428deg,
    rgba(49, 134, 255, 0.5) 204.48deg,
    rgba(49, 134, 255, 0) 308.88deg,
    rgba(52, 168, 82, 0) 360deg
  );
  --standard-curve: cubic-bezier(0.4, 0, 0.2, 1);
  --gradient-curve: cubic-bezier(0.2, 0, 0, 1);
  --emphasized-accelerate: cubic-bezier(0.3, 0, 0.8, 0.15);
  --emphasized-curve: linear(
    0,
    0.002,
    0.01 3.6%,
    0.02 4.9%,
    0.034,
    0.053,
    0.074,
    0.1,
    0.128,
    0.16,
    0.194 13.4%,
    0.271 15%,
    0.344 16.1%,
    0.477 17.5%,
    0.544 18.3%,
    0.607,
    0.66 20.6%,
    0.717 22.4%,
    0.742,
    0.765,
    0.788,
    0.808,
    0.827,
    0.845 30.4%,
    0.865 32.6%,
    0.866,
    0.865 32.7%,
    0.869 33.1%,
    0.883 35.1%,
    0.9 37.7%,
    0.916 40.6%,
    0.929 43.8%,
    0.942 47.2%,
    0.953 51%,
    0.963 55%,
    0.972 59.3%,
    0.979 64%,
    0.986 69%,
    0.991 74.4%,
    0.998 86.4%,
    1
  );

  --start-angle-open: 30deg;
  --end-angle-open: 245deg;
  --start-angle-submit: 200deg;
  --end-angle-submit: 330deg;

  --glow-stroke-width: 2px;

  --glif-rotation-duration: 1000ms;

  --icon-entry-transition: opacity var(--expand-ease-out-duration) linear 800ms;
  --icon-exit-transition: opacity var(--collapse-ease-in-duration)
    var(--emphasized-accelerate);

  --height-expand-duration: 600ms;
  --submit-enabled-transition: opacity 255ms;

  --border-radius-transition: border-radius var(--collapse-duration)
    var(--emphasized-curve);

  --lens-icon-animation-duration: 1100ms;

  border-radius: 30px;
  box-shadow: var(--cr-searchbox-shadow);
  font-size: var(--cr-composebox-font-size, 18px);
  transition: var(--border-radius-transition);
  width: var(--cr-composebox-width, 337px);
}

:host(:not([ntp-realbox-next-enabled])) {
  --expand-ease-in-duration: 400ms;
  --expand-delay: 300ms;
  --expand-ease-out-duration: 300ms;
  --expand-duration: calc(
    var(--expand-ease-in-duration) + var(--expand-delay) +
      var(--expand-ease-out-duration)
  );
  --collapse-ease-in-duration: 100ms;
  --collapse-ease-out-duration: 500ms;
  --collapse-duration: calc(
    var(--collapse-ease-in-duration) + var(--collapse-ease-out-duration)
  );
}

:host([ntp-realbox-next-enabled]) {
  --cr-composebox-font-size: 16px;
  --contextual-entrypoint-and-carousel-context-menu-container-padding-inline-start: 0px;
  --input-bottom-spacing: 12px;
  --text-input-inline-start-spacing: 18px;
}

:host([ntp-realbox-next-enabled]) #input::placeholder {
  font-size: 18px;
  font-weight: 400;
}

:host([expanded_]) {
  border-radius: var(--expanded-border-radius);
}

#errorScrim {
  border-radius: inherit;
}

#composebox {
  display: flex;
  pointer-events: auto;
  position: relative;
  overflow: hidden;
}

:host([is-dragging-file_])::before {
  /*  TODO(crbug.com/454730356): change color and add border */
  background: linear-gradient(
    90deg,
    rgba(255, 240, 230, 0.8),
    rgba(230, 240, 255, 0.8)
  ), white;
  border-radius: var(--expanded-border-radius);
  content: '';
  inset: 0;
  position: absolute;
  z-index: 2;
  pointer-events: none;
}

:host([is-dragging-file_]) #composebox * {
  pointer-events: none;
}

#dragDropPlaceholder {
  display: none;
  position: absolute;
  top: 21px;
  left: 20px;
  pointer-events: none;
}

:host([searchbox-layout-mode='Compact']) #dragDropPlaceholder {
  top: 16px;
}

:host([is-dragging-file_]) #dragDropPlaceholder {
  display: block;
  z-index: 3;
}

:host([is-collapsible]) #composebox {
  transition:
    min-height var(--emphasized-curve),
    max-height var(--emphasized-curve);
  transition-duration: var(--collapse-duration);
  min-height: 60px;
  max-height: 60px;
}

:host(:not([is-collapsible])) #composebox {
  /* If the composebox is not expandable, meaning expanded_ is always true,
   * then the above transition will never be triggered. Instead, manually
   * start the animation so it expands as soon as it is rendered */
  height: 60px;
}

:host([expanded_]) #composebox {
  height: calc-size(auto, size);
  max-height: 422px;
  transition-duration: var(--expand-duration);
}

:host([is-collapsible][expanded_]) #composebox {
  min-height: 136px;
  max-height: 254px;
}

:host([is-collapsible][expanded_][show-file-carousel_][carousel-on-top_]) #composebox {
  min-height: calc(136px + 52px);
}

#inputContainer {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding-bottom: var(--input-bottom-spacing);
  overflow: hidden;
  width: 100%;
}

#textContainer {
  display: flex;
  flex-direction: row;
  padding-block: 8px 0;
  padding-inline: var(--text-input-inline-start-spacing) 0;
}

#iconContainer {
  --text-input-top-spacing: 8px;
  align-items: center;
  display: flex;
  height: 48px;
  justify-content: center;
}

#aimIcon {
  -webkit-mask-image: url(//resources/cr_components/searchbox/icons/search_spark.svg);
  -webkit-mask-position: center;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-size: cover;
  background-color: var(--color-composebox-input-icon);
  height: 20px;
  width: 20px;
}

@media (forced-colors: active) {
  #aimIcon {
    background-color: Highlight;
    border-radius: 4px;
  }
}

#inputWrapper {
  position: relative;
  width: 100%;
}
/* ... */

